logs/jtlocalize.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jtlocalize'...
Listing './lib/python3.5/site-packages/jtlocalize/configuration'...
Listing './lib/python3.5/site-packages/jtlocalize/core'...
Compiling './lib/python3.5/site-packages/jtlocalize/core/create_localized_strings_from_ib_files.py'...
***   File "./lib/python3.5/site-packages/jtlocalize/core/create_localized_strings_from_ib_files.py", line 293
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jtlocalize/core/localization_utils.py'...
***   File "./lib/python3.5/site-packages/jtlocalize/core/localization_utils.py", line 196
    print "Error in file " + file_name
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jtlocalize/word_count.py'...
***   File "./lib/python3.5/site-packages/jtlocalize/word_count.py", line 20
    print word_count(parsed_args.localizable_file)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jtlocalize-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
